<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_admin"
        android:icon="@drawable/ic_admin"
        android:title="Profile"
        app:showAsAction="always"
        android:visible="true"/>
</menu>