<?xml version="1.0" encoding="utf-8"?>
<!-- @author Radhe Patel -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/admin_navigation_view_events"
        android:icon="@drawable/ic_my_events"
        android:title="View Events"
        android:orderInCategory="2" />

    <item
        android:id="@+id/admin_navigation_home"
        android:icon="@drawable/ic_home"
        android:title="Home"
        android:orderInCategory="1" />

    <item
        android:id="@+id/admin_navigation_view_facilities"
        android:icon="@drawable/ic_facility"
        android:title="View Facilities"
        android:orderInCategory="3" />
</menu>