...
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginEnd="8dp" />

            <!-- Delete Button -->
            <ImageButton
                android:id="@+id/facility_remove_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="Delete Facility"
                android:src="@drawable/ic_facility"
                app:tint="@color/primary" />
...
